Image optimizations, translation and styles fixes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "POSITION": "Front-end developer",
-  "ABOUT_ME": "I'm a front-end developer with more than 2 years of commercial experience. Favorite language is JavaScript. Always interested in learning new technologies and solving any kind of problems.",
+  "ABOUT_ME": "Front-end developer with more than 2 years of commercial experience. Favorite language is JavaScript. Always interested in learning new technologies and solving any kind of problems.",
   "JOB": {
     "TITLE": {
       "1": "Front-end developer at Teramind",
