--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,6 @@
 {
   "POSITION": "Front-end разработчик",
-  "ABOUT_ME": "Я - Front-end разработчик с более чем 2 годами коммерческого опыта работы. Любимый язык - JavaScript. Всегда заинтересован в изучении новых технологий и в решении задач любой сложности.",
+  "ABOUT_ME": "Front-end разработчик с более чем 2 годами коммерческого опыта работы. Любимый язык - JavaScript. Всегда заинтересован в изучении новых технологий и в решении задач любой сложности.",
   "JOB": {
     "TITLE": {
       "1": "Front-end разработчик в Teramind",
