Add "Contact me" button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,5 +21,6 @@
   "Languages": "Languages",
   "Employment history": "Employment history",
   "Education": "Education",
-  "Projects": "Projects"
+  "Projects": "Projects",
+  "Contact me": "Contact me"
 }
