--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -21,6 +21,7 @@
   "Languages": "Языки",
   "Employment history": "Опыт работы",
   "Education": "Образование",
-  "Projects": "Проекты"
+  "Projects": "Проекты",
+  "Contact me": "Связаться со мной"
 }
 
