--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,8 @@
     "TITLE": {
       "1": "Front-end developer at Teramind",
       "2": "Front-end developer at Rusodot",
-      "3": "Full-stack developer at Magic Of Gods"
+      "3": "Full-stack developer at Magic Of Gods",
+      "4": "Front-end developer at Epydoc"
     }
   },
   "PROJECT": {
