--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,7 +5,8 @@
     "TITLE": {
       "1": "Front-end разработчик в Teramind",
       "2": "Front-end разработчик в Rusodot",
-      "3": "Full-stack разработчик в Magic Of Gods"
+      "3": "Full-stack разработчик в Magic Of Gods",
+      "4": "Front-end разработчик в Epydoc"
     }
   },
   "PROJECT": {
